--- a/index.html
+++ b/index.html
@@ -219,6 +219,15 @@
   #info1 {
     background-image: url('image/charli.jpg');
   }
+  #info2 {
+    background-image: url('image/2365750.png');
+  }
+  #info3 {
+    background-image: url('image/peakpx1.jpg');
+  }
+  #info4 {
+    background-image: url('image/peakpx.jpg');
+  }
   
   
   
@@ -229,7 +238,7 @@
   <body>
     <header>
       <div class="logo">
-        RedRemix(takmina)
+        RedRemix
       </div>
       <div class="github">
         <a class="githuba" href="https://github.com/Blacklegion69"><i class="fa-brands fa-github"></i></a>
@@ -280,6 +289,12 @@
     <section id="info1" class="welcome">
     </section>
     <section id="info" class="welcome">
+    </section>
+    <section id="info2" class="welcome">
+    </section>
+    <section id="info3" class="welcome">
+    </section>
+    <section id="info4" class="welcome">
     </section>
 <script src="App/App.js" type="text/javascript" charset="utf-8"></script>
   </body>
