--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
     column-gap: 10px;
   }
   .container > div {
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
   }
   .container > div > a {
     text-decoration: none;
-    color: white;
+    color: black;
     background-color: white;
     padding: 5px;
     border-radius: 50%;
@@ -241,14 +241,14 @@
         RedRemix
       </div>
       <div class="github">
-        <a class="githuba" href="https://github.com/Blacklegion69"><i class="fa-brands fa-github"></i></a>
+        <a class="githuba" href="https://github.com/Blacklegion69"><i class="fa-brands fa-github fa-2xs fa-bounce"></i></a>
       </div>
     </header>
     <div class="container">
-        <div class="facebook"><a href="#">🔆</a></div>
-        <div class="twitter"><a href="#">🔆</a></div>
-        <div class="youtube"><a href="#">🔆</a></div>
-        <div class="Instagram"><a href="#">🔆</a></div>
+        <div class="facebook"><a href="#"><i class="fa-brands fa-facebook"></i></a></div>
+        <div class="twitter"><a href="#"><i class="fa-brands fa-twitter"></i></a></div>
+        <div class="youtube"><a href="#"><i class="fa-brands fa-youtube"></i></a></div>
+        <div class="Instagram"><a href="#"><i class="fa-brands fa-instagram"></i></a></div>
       </div>
     <section id="welcome" class="welcome">
       <div class="one">
