--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
     top: -40px;
     text-align: center;
     grid-template-columns: repeat(7,1fr);
+    display: none;
   }
   .itemice2 {
     transform: translate(40%,70%);
@@ -290,12 +291,14 @@
     </section>
     <section id="info" class="welcome">
     </section>
+<!--
     <section id="info2" class="welcome">
     </section>
     <section id="info3" class="welcome">
     </section>
     <section id="info4" class="welcome">
     </section>
+-->
 <script src="App/App.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
