--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    top: -190px;
+    top: -30%;
   }
   .animation {
     height: 50px;
