--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
   }
   body {
     width: 100%;
+    height: 1fr;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    
     flex-direction: column;
   }
   header {
