--- a/index.html
+++ b/index.html
@@ -150,9 +150,25 @@
   .dot10 {
     animation: animate 0.5s linear infinite 1s;
   }
+  .dot11 {
+    animation: animate 0.5s linear infinite 1.1s;
+  }
+  .dot12 {
+    animation: animate 0.5s linear infinite 1.2s;
+  }
+  .dot13 {
+    animation: animate 0.5s linear infinite 1.3s;
+  }
+  .dot14 {
+    animation: animate 0.5s linear infinite 1.4s;
+  }
+  .dot15 {
+    animation: animate 0.5s linear infinite 1.5s;
+  }
   @keyframes animate {
     100% {
       transform: rotatex(90deg);
+      filter: hue-rotate(360deg);
     }
   }
  
@@ -341,6 +357,11 @@
      <div class="dot8"></div> 
      <div class="dot9"></div> 
      <div class="dot10"></div> 
+     <div class="dot11"></div> 
+     <div class="dot12"></div> 
+     <div class="dot13"></div> 
+     <div class="dot14"></div> 
+     <div class="dot15"></div> 
     </div> 
     <div class="animation-1"> 
      <div class="dot1"></div> 
@@ -353,6 +374,11 @@
      <div class="dot8"></div> 
      <div class="dot9"></div> 
      <div class="dot10"></div> 
+     <div class="dot11"></div> 
+     <div class="dot12"></div> 
+     <div class="dot13"></div> 
+     <div class="dot14"></div> 
+     <div class="dot15"></div> 
     </div> 
    </div>
       <div class="one">
