--- a/Social/Facebook.html
+++ b/Social/Facebook.html
@@ -5,6 +5,7 @@
     <meta name="" content="">
     <title></title>
 <style type="text/css" media="all">
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Shizuru&display=swap');
   * {
     margin: 0px;
@@ -38,6 +39,7 @@
     color: black;
     text-decoration: none;
     background-color: #ff9000;
+    font-family: 'Josefin Sans', sans-serif;
     padding: 10px;
     border-radius: 10px;
   }
