--- a/Social/Facebook.html
+++ b/Social/Facebook.html
@@ -3,6 +3,8 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="" content="">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
     <title></title>
 <style type="text/css" media="all">
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
@@ -49,7 +51,7 @@
     <h1>
       404
     </h1>
-    <div class="box">
+    <div class="box fa-bounce">
       <a href="../index.html">Main page</a>
     </div>
   </body>
