--- a/index.html
+++ b/index.html
@@ -346,9 +346,9 @@
     </header>
     <div class="container">
         <div class="facebook"><a href="Social/Facebook.html"><i class="fa-brands fa-facebook fa-shake"></i></a></div>
-        <div class="twitter"><a href="#"><i class="fa-brands fa-twitter fa-shake"></i></a></div>
-        <div class="youtube"><a href="#"><i class="fa-brands fa-youtube fa-shake"></i></a></div>
-        <div class="Instagram"><a href="#"><i class="fa-brands fa-instagram fa-shake"></i></a></div>
+        <div class="twitter"><a href="Social/Twiter.html"><i class="fa-brands fa-twitter fa-shake"></i></a></div>
+        <div class="youtube"><a href="Social/Youtube.html"><i class="fa-brands fa-youtube fa-shake"></i></a></div>
+        <div class="Instagram"><a href="Social/Instagram.html"><i class="fa-brands fa-instagram fa-shake"></i></a></div>
       </div>
     <section id="welcome" class="welcome">
       <div class="animationcombo"> 
