--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
     }
   }
   #info {
-    background-image: url('image/Mix.jpg');
+    background-image: url('image/2365750.png');
       backdrop-filter: blur( 8.5px );
     -webkit-backdrop-filter: blur( 8.5px );
    
