--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
     }
   }
   #info {
-    background-image: url('image/2365750.png');
+    background-image: url('image/Mix.jpg');
       backdrop-filter: blur( 8.5px );
     -webkit-backdrop-filter: blur( 8.5px );
    
@@ -320,8 +320,9 @@
     background-image: url('image/charli.jpg');
   }
   #info2 {
-    background-image: url('image/2365750.png');
+    background-image: -webkit-repeating-linear-gradient( 45deg, #ffbf00,rgb(0,211,255),#ff0000 2px);
   }
+  /*
   #info3 {
     background-image: url('image/peakpx1.jpg');
   }
@@ -330,7 +331,7 @@
   }
   
   
-  
+  */
   
   
 </style>
