--- a/index.html
+++ b/index.html
@@ -348,6 +348,51 @@
       left: 100px;
     }
   }
+  .info1_container {
+    width: 100%;
+    height: 90%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    border: 5px solid white;
+    justify-content: center;
+    bottom: 0px;
+  }
+  .result_box {
+    width: 150px;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: white;
+    border-radius: 10px;
+    position: relative;
+  }
+  .code_icon {
+    width: 100px;
+    height: 100px;
+    border: 2px solid black;
+    border-radius: 50%;
+    position: absolute;
+    top: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 60px;
+    -webkit-text-stroke: 1px orange;
+    box-shadow:  5px 5px 10px #bebebe,
+                -5px -5px 10px #ffffff;
+  }
+  .persent {
+    top: 126px;
+    position: absolute;
+    font-size: 20px;
+    font-weight: bold;
+    text-shadow:  5px 5px 10px #bebebe,
+                -5px -5px 10px #ffffff;
+  }
   #info1 {
     background-image: url('image/charli.jpg');
   }
@@ -458,8 +503,45 @@
         My Skill
       </div>
       <div class="info1_container">
-        <div class="">
-          
+        <div class="result_box">
+          <div class="code_icon"><i class="fa-brands fa-html5"></i></div>
+          <div class="persent">
+            98%
+          </div>
+        </div>
+        <div class="result_box">
+          <div class="code_icon"><i class="fa-brands fa-css3"></i></div>
+          <div class="persent">
+            90%
+          </div>
+        </div>
+        <div class="result_box">
+          <div class="code_icon"><i class="fa-brands fa-js"></i></div>
+          <div class="persent">
+            10%
+          </div>
+        </div>
+        <div class="result_box">
+          <div class="code_icon"><i class="fa-brands fa-github"></i></div>
+          <div class="persent">
+            46%
+          </div>
+        </div>
+        <div class="result_box">
+          <div class="code_icon">
+            <i class="fa-solid fa-rectangle-terminal"></i>
+            </div>
+          <div class="persent">
+            40%
+          </div>
+        </div>
+        <div class="result_box">
+          <div class="code_icon">
+            <i class="fa-solid fa-pen-paintbrush"></i>
+            </div>
+          <div class="persent">
+            16%
+          </div>
         </div>
       </div>
     </section>
