--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="" content="">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="Css/style.css" title="" type="" />
+    <script src="https://kit.fontawesome.com/034032e716.js" crossorigin="anonymous"></script>
     <title></title>
 <style type="text/css" media="all">
 @font-face {
@@ -355,7 +356,6 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    border: 5px solid white;
     justify-content: center;
     bottom: 0px;
   }
@@ -381,7 +381,6 @@
     justify-content: center;
     align-items: center;
     font-size: 60px;
-    -webkit-text-stroke: 1px orange;
     box-shadow:  5px 5px 10px #bebebe,
                 -5px -5px 10px #ffffff;
   }
@@ -529,7 +528,7 @@
         </div>
         <div class="result_box">
           <div class="code_icon">
-            <i class="fa-solid fa-rectangle-terminal"></i>
+            <i class="fa-solid fa-terminal"></i>
             </div>
           <div class="persent">
             40%
@@ -537,7 +536,7 @@
         </div>
         <div class="result_box">
           <div class="code_icon">
-            <i class="fa-solid fa-pen-paintbrush"></i>
+            <i class="fa-solid fa-compass-drafting"></i>
             </div>
           <div class="persent">
             16%
