--- a/index.html
+++ b/index.html
@@ -179,7 +179,6 @@
   #welcome {
     background-image: url('image/Darksky.jpg');
     overflow: hidden;
-    display: none;
   }
   .welcome {
     width: 100%;
@@ -369,6 +368,7 @@
     background-color: white;
     border-radius: 10px;
     position: relative;
+    margin: 10px;
   }
   .code_icon {
     width: 100px;
