--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
         My Skill
       </div>
       <div class="info1_container">
-        <div class="result_box">
+        <div class="result_box fa-bounce">
           <div class="code_icon"><i class="fa-brands fa-html5"></i></div>
           <div class="persent">
             98%
